--- a/client/resources.qrc
+++ b/client/resources.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/styles">
-        <file>style.qss</file>
+        <file>style.css</file>
+    </qresource>
+    <qresource prefix="/gifs">
+        <file>loading.gif</file>
     </qresource>
 </RCC>
