--- a/client/NewGroupDialog.ui
+++ b/client/NewGroupDialog.ui
@@ -46,10 +46,10 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="input_title"/>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_2"/>
+      <widget class="QLineEdit" name="input_description"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
@@ -59,12 +59,12 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QListWidget" name="listWidget"/>
+      <widget class="QListWidget" name="listMembersToAdd"/>
      </item>
      <item row="3" column="1">
       <widget class="QPushButton" name="addMemberButton">
        <property name="text">
-        <string>Add Member</string>
+        <string>Add Members</string>
        </property>
       </widget>
      </item>
