--- a/client/UserWidget.ui
+++ b/client/UserWidget.ui
@@ -76,6 +76,19 @@
      </item>
     </layout>
    </item>
+   <item>
+    <widget class="QPushButton" name="kickButton">
+     <property name="maximumSize">
+      <size>
+       <width>50</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Kick</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
