--- a/client/mainwindow.ui
+++ b/client/mainwindow.ui
@@ -2032,6 +2032,13 @@
                          </widget>
                         </item>
                         <item>
+                         <widget class="QLabel" name="hiddenRole">
+                          <property name="text">
+                           <string/>
+                          </property>
+                         </widget>
+                        </item>
+                        <item>
                          <spacer name="horizontalSpacer_86">
                           <property name="orientation">
                            <enum>Qt::Horizontal</enum>
@@ -2094,6 +2101,13 @@
                          <widget class="QPushButton" name="membersButton">
                           <property name="text">
                            <string>Members</string>
+                          </property>
+                         </widget>
+                        </item>
+                        <item>
+                         <widget class="QPushButton" name="addMembersButton">
+                          <property name="text">
+                           <string>Add Members</string>
                           </property>
                          </widget>
                         </item>
