--- a/client/ScheduleCallDialog.ui
+++ b/client/ScheduleCallDialog.ui
@@ -203,6 +203,9 @@
              <height>16777215</height>
             </size>
            </property>
+           <property name="calendarPopup">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
