--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,42 @@
 QPushButton:disabled {
-    background-color: gray;
+    background-color: lightgray;
+    border-color: gray;
+}
+
+QPushButton, QTextEdit, QLineEdit {
+    background-color: white;
+    border: 2px solid #1B99D4;
+    border-radius: 10px;
+}
+
+QPushButton, QLineEdit {
+    padding: 5px;
+}
+
+QPushButton:hover {
+    background-color: #1B99D4;
+    color: white;
+}
+
+QListWidget::item:active,
+QListWidget::item:!active
+{
+    background: transparent;
+}
+
+QListWidget {
+    border: 2px solid #1B99D4;
+    background-color: white;
+    padding: 2px;
+    border-radius: 10px;
+}
+
+QListWidget[objectName^="groupListWidget"]::item:hover {
+    border: 2px solid #1B99D4;
+    border-radius: 10px;
+}
+
+QCheckBox::indicator {
+    border: 2px solid #32CD32;
+    border-radius: 100%;
 }
